<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.jbenak.tezamv</groupId>
    <artifactId>ardon-feed-converter</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ikonli.verison>12.3.1</ikonli.verison>
        <javafx.version>19</javafx.version>
        <!-- JavaFX classifiers: win, linux, mac -->
        <javafx.classifier>win</javafx.classifier>
        <javafx.excludeClassifier>linux</javafx.excludeClassifier>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-ri</artifactId>
            <version>4.0.1</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.classifier}</classifier>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.13.9</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>mfxlocalization</artifactId>
            <version>11.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${ikonli.verison}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-core</artifactId>
            <version>${ikonli.verison}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fluentui-pack</artifactId>
            <version>${ikonli.verison}</version>
        </dependency>
        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>1.9.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/DIST/lib</outputDirectory>
                            <excludeGroupIds>org.openjfx</excludeGroupIds>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-libs-fx</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/DIST/lib/fx</outputDirectory>
                            <excludeClassifiers>${javafx.excludeClassifier}</excludeClassifiers>
                            <includeGroupIds>org.openjfx</includeGroupIds>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>copy-config</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/DIST/conf</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/conf</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-scripts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/DIST</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/scripts</directory>
                                </resource>
                                <resource>
                                    <directory>${project.basedir}/root</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/DIST</outputDirectory>
                    <finalName>${project.artifactId}</finalName>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>cz.jbenak.tezamv.ardonFeedConverter.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>cz.jbenak.tezamv.ardonFeedConverter.Main</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.3.2</version>
                <executions>
                    <execution>
                        <id>l4j-gui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <dontWrapJar>true</dontWrapJar>
                            <headerType>gui</headerType>
                            <jar>ardon-feed-converter.jar</jar>
                            <outfile>${project.build.directory}/DIST/FeedConverter.exe</outfile>
                            <errTitle>Pro běh programu je nutné mít nainstalované Open JDK aspoň ve verzi 19</errTitle>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>https://jdk.java.net/19/</downloadUrl>
                            <stayAlive>false</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <icon>${project.build.directory}/DIST/app-icon.ico</icon>
                            <jre>
                                <path>%JAVA_HOME%;%PATH%</path>
                                <requiresJdk>false</requiresJdk>
                                <requires64Bit>true</requires64Bit>
                                <minVersion>19</minVersion>
                                <opts>
                                    <opt>--module-path lib/fx</opt>
                                    <opt>--add-modules javafx.controls,javafx.fxml</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>1.0.0.0</txtFileVersion>
                                <fileDescription>Provádí zpracování XML feedů pro společnost TEZA MV s.r.o dodavatelů Ardon Safety s.r.o. a Luma Trading s.r.o.     </fileDescription>
                                <copyright>Jan Benák 2023</copyright>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>1.0.0.0</txtProductVersion>
                                <productName>TEZA Feed converter</productName>
                                <companyName>JAn Benák</companyName>
                                <internalName>cz.jbenak.tezamv.ardonFeedConverter</internalName>
                                <originalFilename>FeedConverter.exe</originalFilename>
                                <language>CZECH</language>
                            </versionInfo>
                            <messages>
                                <startupErr>Nastala chyba při spuštění aplikace.</startupErr>
                                <jreNotFoundErr>Tato aplikace vyžaduje instalovanou Open JDK aspoň ve verzi 19.</jreNotFoundErr>
                                <jreVersionErr>Tato aplikace vyžaduje instalovanou Open JDK aspoň ve verzi 19.</jreVersionErr>
                                <launcherErr>Nastala chyba při spouštění Javy. Prosím, zkontrolujte instalaci.</launcherErr>
                                <instanceAlreadyExistsMsg>Aplikace je již spuštěna.</instanceAlreadyExistsMsg>
                            </messages>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>